@@ -50,8 +50,10 @@ import static org.hisp.dhis.db.model.DataType.GEOMETRY_POINT;
 import static org.hisp.dhis.db.model.DataType.INTEGER;
 import static org.hisp.dhis.db.model.DataType.TEXT;
 import static org.hisp.dhis.db.model.DataType.TIMESTAMP;
+import static org.hisp.dhis.db.model.Table.STAGING_TABLE_SUFFIX;
 import static org.hisp.dhis.db.model.constraint.Nullable.NULL;
 import static org.hisp.dhis.period.PeriodDataProvider.DataSource.DATABASE;
+import static org.hisp.dhis.system.util.SqlUtils.quote;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
@@ -66,7 +68,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.hisp.dhis.analytics.AggregationType;
 import org.hisp.dhis.analytics.AnalyticsTableHookService;
 import org.hisp.dhis.analytics.AnalyticsTableType;
@@ -77,6 +78,7 @@ import org.hisp.dhis.analytics.table.model.AnalyticsTableColumn;
 import org.hisp.dhis.analytics.table.model.AnalyticsTablePartition;
 import org.hisp.dhis.analytics.table.model.Skip;
 import org.hisp.dhis.analytics.table.setting.AnalyticsTableExportSettings;
+import org.hisp.dhis.analytics.table.util.PartitionUtils;
 import org.hisp.dhis.analytics.util.AnalyticsTableAsserter;
 import org.hisp.dhis.category.Category;
 import org.hisp.dhis.category.CategoryCombo;
@@ -87,6 +89,8 @@ import org.hisp.dhis.common.ValueType;
 import org.hisp.dhis.dataapproval.DataApprovalLevelService;
 import org.hisp.dhis.dataelement.DataElement;
 import org.hisp.dhis.db.model.IndexType;
+import org.hisp.dhis.db.sql.PostgreSqlBuilder;
+import org.hisp.dhis.db.sql.SqlBuilder;
 import org.hisp.dhis.organisationunit.OrganisationUnitGroupSet;
 import org.hisp.dhis.organisationunit.OrganisationUnitLevel;
 import org.hisp.dhis.organisationunit.OrganisationUnitService;
@@ -137,6 +141,8 @@ class JdbcEventAnalyticsTableManagerTest {
 
   @Mock private AnalyticsTableExportSettings analyticsExportSettings;
 
+  private final SqlBuilder sqlBuilder = new PostgreSqlBuilder();
+
   private JdbcEventAnalyticsTableManager subject;
 
   private Date today;
@@ -153,10 +159,10 @@ class JdbcEventAnalyticsTableManagerTest {
       PeriodType.getAvailablePeriodTypes().stream()
           .map(
               pt -> {
-                String column = quote(pt.getName().toLowerCase());
-                return new AnalyticsTableColumn(column, TEXT, "dps" + "." + column);
+                String column = pt.getName().toLowerCase();
+                return new AnalyticsTableColumn(column, TEXT, "dps" + "." + quote(column));
               })
-          .collect(Collectors.toList());
+          .toList();
 
   private final BeanRandomizer rnd = BeanRandomizer.create();
 
@@ -178,7 +184,8 @@ class JdbcEventAnalyticsTableManagerTest {
             databaseInfoProvider,
             jdbcTemplate,
             analyticsExportSettings,
-            periodDataProvider);
+            periodDataProvider,
+            sqlBuilder);
     assertThat(subject.getAnalyticsTableType(), is(AnalyticsTableType.EVENT));
   }
 
@@ -225,8 +232,8 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(tableA, notNullValue());
     assertThat(tableB, notNullValue());
 
-    AnalyticsTablePartition partitionA = tableA.getLatestPartition();
-    AnalyticsTablePartition partitionB = tableA.getLatestPartition();
+    AnalyticsTablePartition partitionA = tableA.getLatestTablePartition();
+    AnalyticsTablePartition partitionB = tableA.getLatestTablePartition();
 
     assertThat(partitionA, notNullValue());
     assertThat(partitionA.isLatestPartition(), equalTo(true));
@@ -274,12 +281,21 @@ class JdbcEventAnalyticsTableManagerTest {
 
     new AnalyticsTableAsserter.Builder(tables.get(0))
         .withTableType(AnalyticsTableType.EVENT)
-        .withTableName(TABLE_PREFIX + program.getUid().toLowerCase())
+        .withName(TABLE_PREFIX + program.getUid().toLowerCase() + STAGING_TABLE_SUFFIX)
+        .withMainName(TABLE_PREFIX + program.getUid().toLowerCase())
         .withColumnSize(56 + OU_NAME_HIERARCHY_COUNT)
         .withDefaultColumns(JdbcEventAnalyticsTableManager.FIXED_COLS)
         .addColumns(periodColumns)
-        .addColumn(categoryA.getUid(), CHARACTER_11, "acs.", categoryA.getCreated())
-        .addColumn(categoryB.getUid(), CHARACTER_11, "acs.", categoryB.getCreated())
+        .addColumn(
+            categoryA.getUid(),
+            CHARACTER_11,
+            ("acs." + quote(categoryA.getUid())),
+            categoryA.getCreated())
+        .addColumn(
+            categoryB.getUid(),
+            CHARACTER_11,
+            ("acs." + quote(categoryB.getUid())),
+            categoryB.getCreated())
         .build()
         .verify();
   }
@@ -308,8 +324,8 @@ class JdbcEventAnalyticsTableManagerTest {
 
     assertThat(tables, hasSize(1));
 
-    AnalyticsTableColumn lastUpdated = getColumn("\"lastupdated\"", tables.get(0));
-    AnalyticsTableColumn created = getColumn("\"created\"", tables.get(0));
+    AnalyticsTableColumn lastUpdated = getColumn("lastupdated", tables.get(0));
+    AnalyticsTableColumn created = getColumn("created", tables.get(0));
 
     assertThat(
         lastUpdated.getSelectExpression(),
@@ -352,7 +368,7 @@ class JdbcEventAnalyticsTableManagerTest {
     return analyticsTable.getDimensionColumns().stream()
         .filter(col -> col.getName().equals(column))
         .findFirst()
-        .orElseThrow(() -> new IllegalArgumentException("Column " + column + " not found"));
+        .orElseThrow(() -> new IllegalArgumentException("Column '" + column + "' not found"));
   }
 
   @Test
@@ -441,44 +457,57 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(tables, hasSize(1));
 
     new AnalyticsTableAsserter.Builder(tables.get(0))
-        .withTableName(TABLE_PREFIX + program.getUid().toLowerCase())
+        .withName(TABLE_PREFIX + program.getUid().toLowerCase() + STAGING_TABLE_SUFFIX)
+        .withMainName(TABLE_PREFIX + program.getUid().toLowerCase())
         .withTableType(AnalyticsTableType.EVENT)
         .withColumnSize(63 + OU_NAME_HIERARCHY_COUNT)
         .addColumns(periodColumns)
-        .addColumn(d1.getUid(), TEXT, toAlias(aliasD1, d1.getUid()), Skip.SKIP) // ValueType.TEXT
+        .addColumn(
+            d1.getUid(),
+            TEXT,
+            toSelectExpression(aliasD1, d1.getUid()),
+            Skip.SKIP) // ValueType.TEXT
         .addColumn(
             d2.getUid(),
             DOUBLE,
-            toAlias(aliasD2, d2.getUid()),
+            toSelectExpression(aliasD2, d2.getUid()),
             IndexType.BTREE) // ValueType.PERCENTAGE
         .addColumn(
             d3.getUid(),
             INTEGER,
-            toAlias(aliasD3, d3.getUid()),
+            toSelectExpression(aliasD3, d3.getUid()),
             IndexType.BTREE) // ValueType.BOOLEAN
         .addColumn(
             d4.getUid(),
             TIMESTAMP,
-            toAlias(aliasD4, d4.getUid()),
+            toSelectExpression(aliasD4, d4.getUid()),
             IndexType.BTREE) // ValueType.DATE
         .addColumn(
             d5.getUid(),
             TEXT,
-            toAlias(aliasD5, d5.getUid()),
+            toSelectExpression(aliasD5, d5.getUid()),
             IndexType.BTREE) // ValueType.ORGANISATION_UNIT
         .addColumn(
             d6.getUid(),
             BIGINT,
-            toAlias(aliasD6, d6.getUid()),
+            toSelectExpression(aliasD6, d6.getUid()),
             IndexType.BTREE) // ValueType.INTEGER
         .addColumn(
-            d7.getUid(), GEOMETRY_POINT, toAlias(aliasD7, d7.getUid())) // ValueType.COORDINATES
+            d7.getUid(),
+            GEOMETRY_POINT,
+            toSelectExpression(aliasD7, d7.getUid())) // ValueType.COORDINATES
         // element d5 also creates a Geo column
         .addColumn(
-            d5.getUid() + "_geom", GEOMETRY, toAlias(aliasD5_geo, d5.getUid()), IndexType.GIST)
+            d5.getUid() + "_geom",
+            GEOMETRY,
+            toSelectExpression(aliasD5_geo, d5.getUid()),
+            IndexType.GIST)
         // element d5 also creates a Name column
         .addColumn(
-            d5.getUid() + "_name", TEXT, toAlias(aliasD5_name, d5.getUid() + "_name"), Skip.SKIP)
+            d5.getUid() + "_name",
+            TEXT,
+            toSelectExpression(aliasD5_name, d5.getUid() + "_name"),
+            Skip.SKIP)
         .withDefaultColumns(JdbcEventAnalyticsTableManager.FIXED_COLS)
         .build()
         .verify();
@@ -532,11 +561,16 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(tables, hasSize(1));
 
     new AnalyticsTableAsserter.Builder(tables.get(0))
-        .withTableName(TABLE_PREFIX + program.getUid().toLowerCase())
+        .withName(TABLE_PREFIX + program.getUid().toLowerCase() + STAGING_TABLE_SUFFIX)
+        .withMainName(TABLE_PREFIX + program.getUid().toLowerCase())
         .withTableType(AnalyticsTableType.EVENT)
         .withColumnSize(58 + OU_NAME_HIERARCHY_COUNT)
         .addColumns(periodColumns)
-        .addColumn(d1.getUid(), TEXT, toAlias(aliasD1, d1.getUid()), Skip.SKIP) // ValueType.TEXT
+        .addColumn(
+            d1.getUid(),
+            TEXT,
+            toSelectExpression(aliasD1, d1.getUid()),
+            Skip.SKIP) // ValueType.TEXT
         .addColumn(
             tea1.getUid(), TEXT, String.format(aliasTea1, "ou.uid", tea1.getId(), tea1.getUid()))
         // Second Geometry column created from the OU column above
@@ -703,8 +737,7 @@ class JdbcEventAnalyticsTableManagerTest {
 
   @Test
   void verifyGetAnalyticsTableWithOuLevels() {
-    List<OrganisationUnitLevel> ouLevels =
-        rnd.objects(OrganisationUnitLevel.class, 2).collect(Collectors.toList());
+    List<OrganisationUnitLevel> ouLevels = rnd.objects(OrganisationUnitLevel.class, 2).toList();
     Program programA = rnd.nextObject(Program.class);
     programA.setId(0);
 
@@ -744,7 +777,8 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(tables, hasSize(1));
 
     new AnalyticsTableAsserter.Builder(tables.get(0))
-        .withTableName(TABLE_PREFIX + programA.getUid().toLowerCase())
+        .withName(TABLE_PREFIX + programA.getUid().toLowerCase() + STAGING_TABLE_SUFFIX)
+        .withMainName(TABLE_PREFIX + programA.getUid().toLowerCase())
         .withTableType(AnalyticsTableType.EVENT)
         .withColumnSize(
             JdbcEventAnalyticsTableManager.FIXED_COLS.size()
@@ -754,10 +788,8 @@ class JdbcEventAnalyticsTableManagerTest {
                 + OU_NAME_HIERARCHY_COUNT)
         .addColumns(periodColumns)
         .withDefaultColumns(JdbcEventAnalyticsTableManager.FIXED_COLS)
-        .addColumn(
-            quote("uidlevel" + ouLevels.get(0).getLevel()), col -> match(ouLevels.get(0), col))
-        .addColumn(
-            quote("uidlevel" + ouLevels.get(1).getLevel()), col -> match(ouLevels.get(1), col))
+        .addColumn(("uidlevel" + ouLevels.get(0).getLevel()), col -> match(ouLevels.get(0), col))
+        .addColumn(("uidlevel" + ouLevels.get(1).getLevel()), col -> match(ouLevels.get(1), col))
         .build()
         .verify();
   }
@@ -765,7 +797,7 @@ class JdbcEventAnalyticsTableManagerTest {
   @Test
   void verifyGetAnalyticsTableWithOuGroupSet() {
     List<OrganisationUnitGroupSet> ouGroupSet =
-        rnd.objects(OrganisationUnitGroupSet.class, 2).collect(Collectors.toList());
+        rnd.objects(OrganisationUnitGroupSet.class, 2).toList();
     Program programA = rnd.nextObject(Program.class);
     programA.setId(0);
 
@@ -788,7 +820,8 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(tables, hasSize(1));
 
     new AnalyticsTableAsserter.Builder(tables.get(0))
-        .withTableName(TABLE_PREFIX + programA.getUid().toLowerCase())
+        .withName(TABLE_PREFIX + programA.getUid().toLowerCase() + STAGING_TABLE_SUFFIX)
+        .withMainName(TABLE_PREFIX + programA.getUid().toLowerCase())
         .withTableType(AnalyticsTableType.EVENT)
         .withColumnSize(
             JdbcEventAnalyticsTableManager.FIXED_COLS.size()
@@ -798,16 +831,15 @@ class JdbcEventAnalyticsTableManagerTest {
                 + OU_NAME_HIERARCHY_COUNT)
         .addColumns(periodColumns)
         .withDefaultColumns(JdbcEventAnalyticsTableManager.FIXED_COLS)
-        .addColumn(quote(ouGroupSet.get(0).getUid()), col -> match(ouGroupSet.get(0), col))
-        .addColumn(quote(ouGroupSet.get(1).getUid()), col -> match(ouGroupSet.get(1), col))
+        .addColumn(ouGroupSet.get(0).getUid(), col -> match(ouGroupSet.get(0), col))
+        .addColumn(ouGroupSet.get(1).getUid(), col -> match(ouGroupSet.get(1), col))
         .build()
         .verify();
   }
 
   @Test
   void verifyGetAnalyticsTableWithOptionGroupSets() {
-    List<CategoryOptionGroupSet> cogs =
-        rnd.objects(CategoryOptionGroupSet.class, 2).collect(Collectors.toList());
+    List<CategoryOptionGroupSet> cogs = rnd.objects(CategoryOptionGroupSet.class, 2).toList();
     Program programA = rnd.nextObject(Program.class);
     programA.setId(0);
 
@@ -830,7 +862,8 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(tables, hasSize(1));
 
     new AnalyticsTableAsserter.Builder(tables.get(0))
-        .withTableName(TABLE_PREFIX + programA.getUid().toLowerCase())
+        .withName(TABLE_PREFIX + programA.getUid().toLowerCase() + STAGING_TABLE_SUFFIX)
+        .withMainName(TABLE_PREFIX + programA.getUid().toLowerCase())
         .withTableType(AnalyticsTableType.EVENT)
         .withColumnSize(
             JdbcEventAnalyticsTableManager.FIXED_COLS.size()
@@ -840,30 +873,30 @@ class JdbcEventAnalyticsTableManagerTest {
                 + OU_NAME_HIERARCHY_COUNT)
         .addColumns(periodColumns)
         .withDefaultColumns(JdbcEventAnalyticsTableManager.FIXED_COLS)
-        .addColumn(quote(cogs.get(0).getUid()), col -> match(cogs.get(0), col))
-        .addColumn(quote(cogs.get(1).getUid()), col -> match(cogs.get(1), col))
+        .addColumn(cogs.get(0).getUid(), col -> match(cogs.get(0), col))
+        .addColumn(cogs.get(1).getUid(), col -> match(cogs.get(1), col))
         .build()
         .verify();
   }
 
   private void match(OrganisationUnitGroupSet ouGroupSet, AnalyticsTableColumn col) {
-    String name = quote(ouGroupSet.getUid());
+    String expression = "ougs." + quote(ouGroupSet.getUid());
     assertNotNull(col);
-    assertThat(col.getSelectExpression(), is("ougs." + name));
+    assertThat(col.getSelectExpression(), is(expression));
     match(col);
   }
 
   private void match(OrganisationUnitLevel ouLevel, AnalyticsTableColumn col) {
-    String name = quote("uidlevel" + ouLevel.getLevel());
+    String expression = "ous." + quote("uidlevel" + ouLevel.getLevel());
     assertNotNull(col);
-    assertThat(col.getSelectExpression(), is("ous." + name));
+    assertThat(col.getSelectExpression(), is(expression));
     match(col);
   }
 
   private void match(CategoryOptionGroupSet cog, AnalyticsTableColumn col) {
-    String name = quote(cog.getUid());
+    String expression = "acs." + quote(cog.getUid());
     assertNotNull(col);
-    assertThat(col.getSelectExpression(), is("acs." + name));
+    assertThat(col.getSelectExpression(), is(expression));
     match(col);
   }
 
@@ -873,10 +906,6 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(col.isSkipIndex(), is(false));
     assertThat(col.getNullable(), is(NULL));
     assertThat(col.getIndexColumns(), hasSize(0));
-  }
-
-  private String quote(String string) {
-    return "\"" + string + "\"";
   }
 
   @Test
@@ -946,7 +975,7 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(sql.getValue(), containsString(String.format(ouQuery, "name")));
   }
 
-  private String toAlias(String template, String uid) {
+  private String toSelectExpression(String template, String uid) {
     return String.format(template, uid, uid, uid);
   }
 
